forEnersys/nthing Salesforce CPQ/objects/PriceAction__c.object
<CustomObject>
    <customHelpPage>PriceActionHelp</customHelpPage>
    <description>Action that takes place when the parent price rule fires.</description>
    <fields>
        <fullName>Field__c</fullName>
        <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Markup (%)</fullName>
                </value>
                <value>
                    <fullName>Markup (Amt)</fullName>
                </value>
                <value>
                    <fullName>Monthly_Rental_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Tier3__c</fullName>
                </value>
                <value>
                    <fullName>LOB__c</fullName>
                </value>
                <value>
                    <fullName>Tier1__c</fullName>
                </value>
                <value>
                    <fullName>Rental_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Required_For_Rollup__c</fullName>
                </value>
                <value>
                    <fullName>Lead_Time__c</fullName>
                </value>
                <value>
                    <fullName>Tier2__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Level_Text__c</fullName>
                </value>
                <value>
                    <fullName>Monthly_Rental_Rate_ea__c</fullName>
                </value>
                <value>
                    <fullName>CostPrice__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Number which determines the order in which multiple actions on a rule are executed.</description>
        <inlineHelpText>Number which determines the order in which multiple actions on a rule are executed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentRuleIsActive__c</fullName>
        <formula>Rule__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleLookupObject__c</fullName>
        <formula>TEXT(Rule__r.LookupObject__c)</formula>
        <label>Rule Lookup Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(Rule__r.TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(Rule__r.TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Price rule running this action.</description>
        <inlineHelpText>Price rule running this action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>PriceRule__c</referenceTo>
        <relationshipLabel>Price Actions</relationshipLabel>
        <relationshipName>PriceActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SourceLookupField__c</fullName>
        <description>API Name of the field to return from the row matching the condition.</description>
        <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
        <label>Source Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Value__c</fullName>
                </value>
                <value>
                    <fullName>Level_1_Approval__c</fullName>
                </value>
                <value>
                    <fullName>Level_3_Approval__c</fullName>
                </value>
                <value>
                    <fullName>Level_2_Approval__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that sources value for this action.</description>
        <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
        <label>Source Variable</label>
        <referenceTo>SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Actions (Source)</relationshipLabel>
        <relationshipName>SourcePriceActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <inlineHelpText>Select the object on which the field is defined</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueField__c</fullName>
        <description>Name of the field that sources value for this action.</description>
        <inlineHelpText>If the value you want inserted is calculated in another Quote Line field, select the field here.</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value that will be inserted into the Target Field when conditions are met.</description>
        <inlineHelpText>Enter the value you want inserted into the Target Field when conditions are met.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Target_Object_Validation</fullName>
        <active>true</active>
        <description>Prevents users from creating Price Actions targeting an out-of-scope object.</description>
        <errorConditionFormula>(ISPICKVAL(TargetObject__c, &apos;Product Option&apos;) &amp;&amp; NOT(ISPICKVAL(Rule__r.TargetObject__c, &apos;Product Option&apos;) || ISPICKVAL(Rule__r.TargetObject__c, &apos;Configurator&apos;))) || ((ISPICKVAL(TargetObject__c, &apos;Quote&apos;) || ISPICKVAL(TargetObject__c, &apos;Quote Line&apos;)) &amp;&amp; NOT(ISPICKVAL(Rule__r.TargetObject__c, &apos;Quote Line&apos;) || ISPICKVAL(Rule__r.TargetObject__c, &apos;Calculator&apos;)))</errorConditionFormula>
        <errorDisplayField>TargetObject__c</errorDisplayField>
        <errorMessage>Price Action Target Object must match Price Rule Target Object</errorMessage>
    </validationRules>
</CustomObject>